update portfolio view to materialize framework, also add gifs in place of project thumbnails

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -3,28 +3,55 @@
     <head>
         <meta charset="utf-8">
         <title>Tyler J. Sweeney Portfolio</title>
-        <link rel="stylesheet" href="./styles.css" type="text/css">
-    </head>
-    <body>
-            <header id="masthead">
-                    <div class="container">
-                        <a href="/" id="logo">Tyler Sweeney</a>
-                        <nav>
-                            <a href="about">About</a>
-                            <a href="portfolio">Portfolio</a>
-                            <a href="contact">Contact</a>
-                        </nav>
-                    </div>
-                    </header>
-                    <div id="main-container" class="container">
-                            <section class="main-section">
-                                <h1>Portfolio</h1>
-                    
-                                <div class="work">
-                                    <img src="hangman.PNG" class="auth-img" alt="futurama hangman game">
-                    
-                                    <h3>Hangman</h3>
-                                </div>
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" href="./styles.css" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    <script src="scripts.js"></script>
+</head>
+<body>
+    <nav>
+        <div class="nav-wrapper">
+          <a href="/" class="brand-logo center"><img id= "logo"src="logo.png"></a>
+          <ul class="left hide-on-med-and-down">
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="portfolio">Portfolio</a></li>
+            <li><a href="about">About</a></li>
+            <li><a href="contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="parallax-container">
+            <div class="parallax"><img src="bg.jpg"></div>
+          </div>
+          <div class="section white">
+            <div class="row container">
+              <h2 class="header">Futurama Hangman</h2>
+
+              <div class="row">
+                  <div class="col s6">
+              <img src="hangman.gif">
+              </div>
+              <div class="s6">
+              <p class="grey-text text-darken-3 lighten-3">
+                  This is a short game that we did early on in the course which I revisited
+                  to add the Bender hangman animation .
+
+                  Created with HTML5, CSS, Javascript and JQuery.
+              </p>
+              </div>
+              </div>
+            </div>
+          </div>
+          <div class="parallax-container">
+            <div class="parallax"><img src="planetExpress2.jpg"></div>
+          </div>
+
+
                                 <div class="work">
                                     <img src="wearestillcool.PNG" class="auth-img" alt="futurama hangman game">
                         
