--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -17,8 +17,8 @@
         <div class="nav-wrapper">
           <a href="/" class="brand-logo center"><img id= "logo"src="logo.png"></a>
           <ul class="left hide-on-med-and-down">
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="portfolio">Portfolio</a></li>
+            <li><a href="/">Home</a></li>
+            <li class="active"><a href="portfolio">Portfolio</a></li>
             <li><a href="about">About</a></li>
             <li><a href="contact">Contact</a></li>
           </ul>
