add gif for wearestill cool and create container and parallax

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -41,7 +41,7 @@
                   This is a short game that we did early on in the course which I revisited
                   to add the Bender hangman animation .
 
-                  Created with HTML5, CSS, Javascript and JQuery.
+                  Technologies Used: with HTML5, CSS, Javascript and JQuery.
               </p>
               </div>
               </div>
@@ -50,45 +50,61 @@
           <div class="parallax-container">
             <div class="parallax"><img src="planetExpress2.jpg"></div>
           </div>
+          <div class="section white">
+                <div class="row container">
+                  <h2 class="header">We Are Still Cool App</h2>
+    
+                  <div class="row">
+                      <div class="col s6">
+                  <img src="wearestillcool.gif">
+                  </div>
+                  <div class="s6">
+                  <p class="grey-text text-darken-3 lighten-3">
+                    This is a medium sized social app/website. It has authenticatic login, profiles,
+                    forums, product reviews, and meetups.
+
+                    Technologies used: HTML, CSS, JavaScript, React, MongoDB, Passport.js
+                  </p>
+                  </div>
+                  </div>
+                </div>
+              </div>
+              <div class="parallax-container">
+                <div class="parallax"><img src="kids_birthdayparty1024.jpg"></div>
+              </div>
 
 
-                                <div class="work">
-                                    <img src="wearestillcool.PNG" class="auth-img" alt="futurama hangman game">
-                        
-                                    <h3>We Are Still Cool</h3>
-                                </div>
-                                <div class="work">
-                                    <img src="beerme.PNG" class="auth-img" alt="futurama hangman game">
-                            
-                                    <h3>Beer Me</h3>
-                                </div>
-                                <div class="work">
-                                    <img src="train.PNG" class="auth-img" alt="futurama hangman game">
-                            
-                                    <h3>Train Schedule</h3>
-                                </div>    
-                    
-                                <div class="work">
-                                    <img src="friendfinder.PNG" class="auth-img" alt="futurama hangman game">
                                 
-                                    <h3>Friend Finder</h3>
-                                </div> 
-                                <div class="work">
-                                    <img src="nyt.PNG" class="auth-img" alt="futurama hangman game">
-                                    <h3>React NYT Scrubber</h3>
-                                </div>       
-                            </section>
+                            
+                        <h3>Beer Me</h3>
+                    </div>
+                    <div class="work">
+                        <img src="train.PNG" class="auth-img" alt="futurama hangman game">
+                
+                        <h3>Train Schedule</h3>
+                    </div>    
+        
+                    <div class="work">
+                        <img src="friendfinder.PNG" class="auth-img" alt="futurama hangman game">
                     
-                            <section class="sidebar">
-                                <div id="connect">
-                                    <h2>Connect with Me</h2>
+                        <h3>Friend Finder</h3>
+                    </div> 
+                    <div class="work">
+                        <img src="nyt.PNG" class="auth-img" alt="futurama hangman game">
+                        <h3>React NYT Scrubber</h3>
+                    </div>       
+                </section>
                     
-                                    <a href="https://github.com/tylersweeney"><img src="github128.png" class="social" alt="Github"></a>
+                <section class="sidebar">
+                    <div id="connect">
+                        <h2>Connect with Me</h2>
+                    
+                <a href="https://github.com/tylersweeney"><img src="github128.png" class="social" alt="Github"></a>
                 <a href="https://www.linkedin.com/in/tylerjsweeney/"><img src="linkedin128.png" class="social" alt="LinkedIn"></a>
                 <a href="https://stackoverflow.com/users/8525667/tyler-sweeney"><img src="stackoverflow128.png" class="social" alt="Stack Overflow"></a>
                                 </div>
                     
-                            </section>
+                </section>
                             </div>
                             <footer>
                                 <div class="container">
