parallax container ids

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav>
-        <div class="nav-wrapper">
+        <div class="nav-wrapper green accent-1">
           <a href="/" class="brand-logo center"><img id= "logo"src="logo.png"></a>
           <ul class="left hide-on-med-and-down">
             <li class="active"><a href="/">Home</a></li>
@@ -25,10 +25,11 @@
         </div>
       </nav>
 
-    <div class="parallax-container">
+    <div id="block1" class="parallax-container">
         <div class="parallax"><img src="bg.jpg"></div>
     </div>
-      <div class="section white">
+
+      <div id="block2" class="section white">
         <div class="row container">
           <h2 class="header">About Me</h2>
           
@@ -53,6 +54,7 @@
           </div>
         </div>
       </div>
+                                                                    
     <div class="parallax-container">
       <div class="parallax"><img src="6screens.jpg"></div>
     </div>
