--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -25,7 +25,7 @@
         </div>
       </nav>
 
-      <div class="parallax-container">
+      <div id="block1"class="parallax-container">
             <div class="parallax"><img src="bg.jpg"></div>
           </div>
           <div class="section white">
