add features component to home view

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,6 +25,23 @@
         </div>
       </nav>
 
+  <!-- Element Showed -->
+  <div class="fixed-action-btn direction-top active" style="bottom: 45px; right: 24px;">
+      <a id="email" class="btn btn-floating btn-large pulse cyan waves-effect waves-light btn" onclick="$('.tap-target').tapTarget('open')"><i class="material-icons">email</i></a>">
+        
+      </a>
+    </div>  <!-- Tap Target Structure -->
+<div class="tap-target" data-target="email">
+  <div class="tap-target-content">
+    <h5>Contact Info</h5>
+    <p>tylersweeney@gmail.com</p>
+    <p>(714) 501-6400</p>
+    <a href="https://github.com/tylersweeney"><img src="assets/images/github128.png" class="social" alt="Github"></a>
+    <img src="assets/images/linkedin128.png" class="social" alt="LinkedIn">
+    <img src="assets/images/stackoverflow128.png" class="social" alt="Stack Overflow">
+  </div>
+</div>
+
     <div id="block1" class="parallax-container">
         <div class="parallax"><img src="bg.jpg"></div>
     </div>
@@ -103,7 +120,7 @@
               </div>
             
             <div class="row">
-              
+
               <div class="col s2">
                   <img id="tech"src="jquerylogo.png">
               </div>
