fix typo on line 31

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
 
   <!-- Element Showed -->
   <div class="fixed-action-btn direction-top active" style="bottom: 45px; right: 24px;">
-      <a id="email" class="btn btn-floating btn-large pulse cyan waves-effect waves-light btn" onclick="$('.tap-target').tapTarget('open')"><i class="material-icons">email</i></a>">
+      <a id="email" class="btn btn-floating btn-large pulse cyan waves-effect waves-light btn" onclick="$('.tap-target').tapTarget('open')"><i class="material-icons">email</i></a>
         
       </a>
     </div>  <!-- Tap Target Structure -->
