add icons to contact feature

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -37,9 +37,9 @@
     <h5>Contact Info</h5>
     <p>tylersweeney@gmail.com</p>
     <p>(714) 501-6400</p>
-    <a href="https://github.com/tylersweeney"><img src="assets/images/github128.png" class="social" alt="Github"></a>
-    <img src="assets/images/linkedin128.png" class="social" alt="LinkedIn">
-    <img src="assets/images/stackoverflow128.png" class="social" alt="Stack Overflow">
+    <i class="material-icons">public</i><a href="https://github.com/tylersweeney">Github</a>
+    <i class="material-icons">assignment_ind</i><a href="https://www.linkedin.com/in/tylerjsweeney/">LinkedIn</a>
+    <i class="material-icons">equalizer</i><a href="https://stackoverflow.com/users/8525667/tyler-sweeney">Stack Overflow</a>
   </div>
 </div>
 
@@ -144,7 +144,7 @@
         <div class="parallax"><img src="prog-bg.jpg"></div>
       </div>
     
-      <footer class="page-footer">
+      <footer class="page-footer green accent-1">
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
