--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -15,7 +15,7 @@
 </head>
 <body>
     <nav>
-        <div class="nav-wrapper">
+        <div class="nav-wrapper green accent-1">
           <a href="/" class="brand-logo center"><img id= "logo"src="logo.png"></a>
           <ul class="left hide-on-med-and-down">
             <li><a href="/">Home</a></li>
@@ -159,7 +159,7 @@
                           </div>                                
                             
                             </div>
-                            <footer class="page-footer">
+                            <footer class="page-footer green accent-1">
                                     <div class="container">
                                       <div class="row">
                                         <div class="col l6 s12">
