add notes for suggested changes from career services

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -20,8 +20,8 @@
           <ul class="left hide-on-med-and-down">
             <li><a href="/">Home</a></li>
             <li class="active"><a href="portfolio">Portfolio</a></li>
-            <li><a href="about">About</a></li>
-            <li><a href="contact">Contact</a></li>
+            <!-- <li><a href="about">About</a></li>
+            <li><a href="contact">Contact</a></li> -->
           </ul>
         </div>
       </nav>
@@ -59,7 +59,13 @@
                   This is a short game that we did early on in the course which I revisited
                   to add the Bender hangman animation .
 
-                  Technologies Used: with HTML5, CSS, Javascript and JQuery.
+                  Technologies Used: with HTML5, CSS, Javascript and JQuery.\
+
+                  What did I gain, demonstrate or learn from this project
+
+                  group size
+
+                  timeframe, deadline
               </p>
               </div>
               </div>
@@ -162,7 +168,7 @@
                             <footer class="page-footer green accent-1">
                                     <div class="container">
                                       <div class="row">
-                                        <div class="col l6 s12">
+                                        <div class="col l6 s6">
                                           <h5 class="white-text">Tyler Sweeney</h5>
                                           <p class="grey-text text-lighten-4"><img src="logo.png"></p>
                                         </div>
@@ -171,8 +177,8 @@
                                           <ul>
                                             <li><a class="grey-text text-lighten-3" href="/">Home</a></li>
                                             <li><a class="grey-text text-lighten-3" href="portfolio">Portfolio</a></li>
-                                            <li><a class="grey-text text-lighten-3" href="about">About</a></li>
-                                            <li><a class="grey-text text-lighten-3" href="contact">Contact</a></li>
+                                            <!-- <li><a class="grey-text text-lighten-3" href="about">About</a></li>
+                                            <li><a class="grey-text text-lighten-3" href="contact">Contact</a></li> -->
                                           </ul>
                                         </div>
                                       </div>
