hide hangman game, not strongest work

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -20,12 +20,13 @@
           <ul class="left hide-on-med-and-down">
             <li><a href="/">Home</a></li>
             <li class="active"><a href="portfolio">Portfolio</a></li>
-            <!-- <li><a href="about">About</a></li>
-            <li><a href="contact">Contact</a></li> -->
+            <!-- <li><a href="about">About</a></li> -->
+            <li><a href="contact">Contact</a></li>
           </ul>
         </div>
       </nav>
   <!-- Element Showed -->
+  <!-- need to make it obvious that this  -->
   <div class="fixed-action-btn direction-top active" style="bottom: 45px; right: 24px;">
         <a id="email" class="btn btn-floating btn-large pulse cyan waves-effect waves-light btn" onclick="$('.tap-target').tapTarget('open')"><i class="material-icons">email</i></a>">
           
@@ -43,7 +44,7 @@
   </div>
 
      
-  <div id="block1"class="parallax-container">
+  <!-- <div id="block1"class="parallax-container">
             <div class="parallax">Projects and Designs<img src="bg.jpg"></div>
           </div>
           <div class="section white">
@@ -61,16 +62,12 @@
 
                   Technologies Used: with HTML5, CSS, Javascript and JQuery.\
 
-                  What did I gain, demonstrate or learn from this project
 
-                  group size
-
-                  timeframe, deadline
               </p>
               </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="parallax-container">
             <div class="parallax"><img src="planetExpress2.jpg"></div>
           </div>
@@ -88,6 +85,12 @@
                     forums, product reviews, and meetups.
 
                     Technologies used: HTML, CSS, JavaScript, React, MongoDB, Passport.js
+
+                    What did I gain, demonstrate or learn from this project
+
+                    group size
+  
+                    timeframe, deadline
                   </p>
                   </div>
                   </div>
